fixing sourceshift css for deferred load.

--- a/spaces/SourceShift/SourceShift.css
+++ b/spaces/SourceShift/SourceShift.css
@@ -25,7 +25,10 @@
 
 .SSSourceShiftEditorTop
 {
-  float: left;
+  position: absolute;
+  left: 0px;
+  right: 20px;
+  height: 12px;
 }
 
 .SSSourceShiftEditorHandleArea
